--- a/arm/Makefile.tztest
+++ b/arm/Makefile.tztest
@@ -6,6 +6,7 @@ TZOBJS		= $(ARCH)/sm_asm.o \
 			  $(ARCH)/sm.o \
 			  $(ARCH)/secure_init.o \
 			  $(ARCH)/nonsecure_init.o \
+			  $(ARCH)/tztest_mmu.o \
 			  $(ARCH)/tztest_secure_svc.o \
 			  $(ARCH)/tztest_secure_usr.o \
 			  $(ARCH)/tztest_nonsecure_svc.o \
