Break out non-init secure code
As part of general clean-up, move the non initialization functions out of the
secure_init code.

Signed-off-by: Greg Bellows <greg.bellows@linaro.org>

--- a/arm/Makefile.tztest
+++ b/arm/Makefile.tztest
@@ -8,6 +8,7 @@ TZSECLOAD		= $(ARCH)/tztest_secure.lds
 TZNSECLOAD		= $(ARCH)/tztest_nonsecure.lds
 TZSECOBJS		= $(ARCH)/secure_init.o \
 			  	  $(ARCH)/tztest_secure_svc.o \
+			  	  $(ARCH)/secure_asm.o \
                   $(ARCH)/sm_asm.o \
 			  	  $(ARCH)/sm.o
 TZNSECOBJS		= $(ARCH)/nonsecure_init.o \
