Break out monitor mode specific code
As part of general cleanup, move the monitor code into its own C and ASM
modules.

Signed-off-by: Greg Bellows <greg.bellows@linaro.org>

--- a/arm/Makefile.tztest
+++ b/arm/Makefile.tztest
@@ -9,6 +9,8 @@ TZNSECLOAD		= $(ARCH)/tztest_nonsecure.lds
 TZSECOBJS		= $(ARCH)/secure_init.o \
 			  	  $(ARCH)/tztest_secure_svc.o \
 			  	  $(ARCH)/secure_asm.o \
+                  $(ARCH)/monitor.o \
+                  $(ARCH)/monitor_asm.o \
                   $(ARCH)/sm_asm.o \
 			  	  $(ARCH)/sm.o
 TZNSECOBJS		= $(ARCH)/nonsecure_init.o \
