Cleanup secure code name space
Removed the tztest moniker form the secure side code to better delineate the
secure code infrastructure from the actual test code.

Signed-off-by: Greg Bellows <greg.bellows@linaro.org>

--- a/arm/Makefile.tztest
+++ b/arm/Makefile.tztest
@@ -7,7 +7,7 @@ TZBOOT			= $(ARCH)/tzboot.o
 TZSECLOAD		= $(ARCH)/tztest_secure.lds
 TZNSECLOAD		= $(ARCH)/tztest_nonsecure.lds
 TZSECOBJS		= $(ARCH)/secure_init.o \
-			  	  $(ARCH)/tztest_secure_svc.o \
+			  	  $(ARCH)/secure_svc.o \
 			  	  $(ARCH)/secure_asm.o \
                   $(ARCH)/monitor.o \
                   $(ARCH)/monitor_asm.o \
