--- a/arm/Makefile.tztest
+++ b/arm/Makefile.tztest
@@ -19,6 +19,10 @@ TZNSECOBJS		= $(ARCH)/nonsecure_init.o \
 TZOBJS			= $(ARCH)/common_mmu.o \
                   $(ARCH)/common_svc.o
 
+ifneq (,$(findstring DEBUG, $(CFLAGS)))
+    TZNSECOBJS += $(ARCH)/tztest_debug.o
+endif
+
 all: $(TZTEST_IMAGE)
 
 ##################################################################
