Reorganize and rename secure EL1 files and symbols
Signed-off-by: Greg Bellows <greg.bellows@linaro.org>

--- a/aarch64/Makefile
+++ b/aarch64/Makefile
@@ -1,16 +1,16 @@
-SECTEST			= tztest_secure.elf
-SECTESTIMAGE 	= tztest_secure.flat
-TZTEST_IMAGE 	= tztest.img
-TZBOOT			= tzboot.o \
+BIOS_IMAGE 		= tztest.img
+EL1_S_ELF		= el1_sec.elf
+EL1_S_IMAGE 	= el1_sec.bin
+EL3_OBJS		= tzboot.o \
                   el3_init.o \
                   el3_exception.o \
-                  monitor_asm.o \
-                  el3.o
-TZBOOTELF		= tzboot.elf
-TZBOOTIMAGE		= tzboot.flat
-TZSECLOAD		= tztest_secure.lds
-TZBOOTLOAD		= tzboot.lds
-TZSECOBJS		= secure_init.o #\
+                  el3.o \
+                  el3_monitor_asm.o
+EL3_ELF			= el3.elf
+EL3_IMAGE		= el3.bin
+EL3_LOAD		= el3.lds
+EL1_S_LOAD		= el1_sec.lds
+EL1_S_OBJS		= el1_sec_init.o #\
 			  	  secure_svc.o \
 			  	  secure_asm.o \
                   sm_asm.o \
@@ -22,37 +22,37 @@ TZOBJS			= common_mmu.o #\
 
 ##################################################################
 
-$(TZBOOTELF): $(TZBOOT) $(TZOBJS) $(TZBOOTLOAD)
-	$(LD) -o $@ $(TZBOOT) $(TZOBJS) $(FLATLIBS) --script=$(TZBOOTLOAD)
+$(EL3_ELF): $(EL3_OBJS) $(EL3_LOAD)
+	$(LD) -o $@ $(EL3_OBJS) $(FLATLIBS) --script=$(EL3_LOAD)
 
-$(TZBOOTIMAGE): $(TZBOOTELF)
+$(EL3_IMAGE): $(EL3_ELF)
 	$(OBJCOPY) -O binary $< $@
 
-$(SECTEST): $(TZSECOBJS) $(TZOBJS) $(TZSECLOAD)
-	$(LD) -o $@ $(TZSECOBJS) $(TZOBJS) $(FLATLIBS) --script=$(TZSECLOAD)
+$(EL1_S_ELF): $(EL1_S_OBJS) $(TZOBJS) $(EL1_S_LOAD)
+	$(LD) -o $@ $(EL1_S_OBJS) $(TZOBJS) $(FLATLIBS) --script=$(EL1_S_LOAD)
 
-$(SECTESTIMAGE): $(SECTEST)
+$(EL1_S_IMAGE): $(EL1_S_ELF)
 	$(OBJCOPY) -O binary $< $@
 
-$(TZTEST_IMAGE): $(TZBOOTIMAGE) $(SECTESTIMAGE) $(NSECTESTIMAGE)
-	dd if=$(TZBOOTIMAGE) of=$@ 2> /dev/null
-	dd oflag=seek_bytes seek=65536 if=$(SECTESTIMAGE) of=$@ 2> /dev/null
-	chmod +x $(TZTEST_IMAGE)
+$(BIOS_IMAGE): $(EL3_IMAGE) $(EL1_S_IMAGE) $(EL1_NS_IMAGE)
+	dd if=$(EL3_IMAGE) of=$@ 2> /dev/null
+	dd oflag=seek_bytes seek=65536 if=$(EL1_S_IMAGE) of=$@ 2> /dev/null
+	chmod +x $(BIOS_IMAGE)
 
-$(TZBOOTLOAD): tzboot.lds.S Makefile ../platform/$(PLAT)/
+$(EL3_LOAD): el3.lds.S Makefile ../platform/$(PLAT)/
 	$(CC) $(CFLAGS) -E -P -C -o $@ $<
 
-$(TZSECLOAD): tztest_secure.lds.S Makefile ../platform/$(PLAT)/
+$(EL1_S_LOAD): el1_sec.lds.S Makefile ../platform/$(PLAT)/
 	$(CC) $(CFLAGS) -E -P -C -o $@ $<
 
 %.o: %.S
 	$(CC) $(CFLAGS) -mcmodel=large -c -nostdlib -o $@ $<
 
-all: $(TZTEST_IMAGE)
+all: $(BIOS_IMAGE)
 
 clean:
-	$(RM) $(TZOBJS) $(TZSECOBJS) $(TZNSECOBJS) \
-		  $(TZSECLOAD) $(TZNSECLOAD) \
-          $(TZBOOT) $(TZBOOTELF) $(TZBOOTIMAGE) $(TZBOOTLOAD) \
-		  $(SECTEST) $(SECTESTIMAGE) $(NSECTEST) $(NSECTESTIMAGE) \
-		  $(TZTEST_IMAGE) .*.d
+	$(RM) $(TZOBJS) $(EL1_S_OBJS) $(TZNSECOBJS) \
+		  $(EL1_S_LOAD) $(TZNSECLOAD) \
+          $(EL3_OBJS) $(EL3_ELF) $(EL3_IMAGE) $(EL3_LOAD) \
+		  $(EL1_S_ELF) $(EL1_S_IMAGE) $(NSECTEST) $(NSECTESTIMAGE) \
+		  $(BIOS_IMAGE) .*.d
