--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,10 @@
 *.a
 *.d
 *.o
-*.flat
+*.bin
 *.elf
 *.img
+*.swp
+*.lds
 cscope.*
 /config.mak
-arm/tzboot.lds
-arm/tztest_secure.lds
-arm/tztest_nonsecure.lds
-aarch64/tzboot.lds
-aarch64/tztest_secure.lds
