--- a/aarch64/Makefile
+++ b/aarch64/Makefile
@@ -2,6 +2,7 @@ BIOS_IMAGE 		= tztest.img
 EL3_IMAGE		= el3/el3.bin
 EL1_S_IMAGE		= el1_s/el1_sec.bin
 EL1_NS_IMAGE	= el1_ns/el1_nsec.bin
+TZTEST_IMAGE 	= el0_ns/tztest.elf
 
 CFLAGS += -I../../platform/$(PLAT) -I../../libcflat/include -I../common
 
@@ -9,10 +10,11 @@ CFLAGS += -I../../platform/$(PLAT) -I../../libcflat/include -I../common
 
 ##################################################################
 
-$(BIOS_IMAGE): $(EL3_IMAGE) $(EL1_S_IMAGE) $(EL1_NS_IMAGE)
+$(BIOS_IMAGE): $(EL3_IMAGE) $(EL1_S_IMAGE) $(EL1_NS_IMAGE) $(TZTEST_IMAGE)
 	dd if=$(EL3_IMAGE) of=$@ 2> /dev/null
 	dd oflag=seek_bytes seek=65536 if=$(EL1_S_IMAGE) of=$@ 2> /dev/null
 	dd oflag=seek_bytes seek=131072 if=$(EL1_NS_IMAGE) of=$@ 2> /dev/null
+	dd oflag=seek_bytes seek=196608 if=$(TZTEST_IMAGE) of=$@ 2> /dev/null
 	chmod +x $(BIOS_IMAGE)
 
 $(EL3_IMAGE):
@@ -24,10 +26,14 @@ $(EL1_S_IMAGE):
 $(EL1_NS_IMAGE):
 	$(MAKE) -C el1_ns all
 
+$(TZTEST_IMAGE):
+	$(MAKE) -C el0_ns all
+
 all: $(BIOS_IMAGE)
 
 clean:
 	$(MAKE) -C el3 clean
 	$(MAKE) -C el1_s clean
 	$(MAKE) -C el1_ns clean
+	$(MAKE) -C el0_ns clean
 	$(RM) $(BIOS_IMAGE) .*.d
