Add secure EL0 along with supporting changes
Added a separate secure EL0 image and loading.  Changed exception model to have
commands driven from this level.  Fixed exception handler issues and cleaned up
debug messages.

Signed-off-by: Greg Bellows <greg.bellows@linaro.org>

--- a/aarch64/el1_ns/Makefile
+++ b/aarch64/el1_ns/Makefile
@@ -11,6 +11,8 @@ EL1_NS_OBJS		= el1_init.o \
 
 -include .*.d
 
+CFLAGS += -I../el0_ns/
+
 ##################################################################
 
 $(EL1_NS_ELF): $(EL1_NS_OBJS) $(EL1_NS_LOAD)
