--- a/aarch64/el1_s/Makefile
+++ b/aarch64/el1_s/Makefile
@@ -11,6 +11,8 @@ EL1_S_OBJS		= el1_init.o \
 
 -include .*.d
 
+CFLAGS += -I../el0_s/
+
 ##################################################################
 
 $(EL1_S_ELF): $(EL1_S_OBJS) $(EL1_S_LOAD)
