--- a/aarch64/el3/Makefile
+++ b/aarch64/el3/Makefile
@@ -1,7 +1,10 @@
+VPATH	= ../common
+
 EL3_OBJS		= el3_init.o \
                   el3_exception.o \
                   el3.o \
-                  el3_monitor_asm.o
+                  el3_monitor_asm.o \
+                  builtins.o
 EL3_ELF			= el3.elf
 EL3_IMAGE		= el3.bin
 EL3_LOAD		= el3.lds
