Commonized EL0 code
Signed-off-by: Greg Bellows <greg.bellows@linaro.org>

--- a/aarch64/el0_s/Makefile
+++ b/aarch64/el0_s/Makefile
@@ -1,12 +1,15 @@
-VPATH	= ../common
+VPATH	= ../el0_common:../common
 
 EL0_S_ELF		= tztest.elf
 EL0_S_IMAGE 	= tztest.bin
 EL0_S_LOAD		= tztest.lds
-EL0_S_OBJS		= tztest.o \
+EL0_S_OBJS		= tztest_sec.o \
+				  tztest.o \
                   builtins.o
 
 -include .*.d
+
+CFLAGS += -I../el0_common
 
 ##################################################################
 
