--- a/aarch64/el1_s/Makefile
+++ b/aarch64/el1_s/Makefile
@@ -7,6 +7,7 @@ EL1_S_OBJS		= el1_init.o \
                   el1_exception.o \
                   el1.o \
                   el1_sec.o \
+				  svc.o \
 				  builtins.o
 
 -include .*.d
