--- a/aarch64/el0_s/Makefile
+++ b/aarch64/el0_s/Makefile
@@ -1,10 +1,11 @@
 VPATH	= ../el0_common:../common
 
-EL0_S_ELF		= tztest.elf
-EL0_S_IMAGE 	= tztest.bin
-EL0_S_LOAD		= tztest.lds
+EL0_S_ELF		= el0_sec.elf
+EL0_S_IMAGE 	= el0_sec.bin
+EL0_S_LOAD		= el0_sec.lds
 EL0_S_OBJS		= tztest_sec.o \
 				  tztest.o \
+				  el0.o \
                   builtins.o
 
 -include .*.d
@@ -19,7 +20,7 @@ $(EL0_S_ELF): $(EL0_S_OBJS) $(EL0_S_LOAD)
 $(EL0_S_IMAGE): $(EL0_S_ELF)
 	$(OBJCOPY) -O binary $< $@
 
-$(EL0_S_LOAD): tztest.lds.S Makefile ../../platform/$(PLAT)/
+$(EL0_S_LOAD): el0_sec.lds.S Makefile ../../platform/$(PLAT)/
 	$(CC) $(CFLAGS) -fpic -pie -E -P -C -o $@ $<
 
 %.o: %.S
