Commonize mem routines and cleanup
Signed-off-by: Greg Bellows <greg.bellows@linaro.org>

--- a/aarch64/el0_s/Makefile
+++ b/aarch64/el0_s/Makefile
@@ -10,18 +10,19 @@ EL0_S_OBJS		= tztest_sec.o \
 
 -include .*.d
 
+CFLAGS += -pie
 CFLAGS += -I../el0_common
 
 ##################################################################
 
 $(EL0_S_ELF): $(EL0_S_OBJS) $(EL0_S_LOAD)
-	$(LD) -fpic -pie -o $@ $(EL0_S_OBJS) $(FLATLIBS) --script=$(EL0_S_LOAD)
+	$(LD) -pie -o $@ $(EL0_S_OBJS) $(FLATLIBS) --script=$(EL0_S_LOAD)
 
 $(EL0_S_IMAGE): $(EL0_S_ELF)
 	$(OBJCOPY) -O binary $< $@
 
 $(EL0_S_LOAD): el0_sec.lds.S Makefile ../../platform/$(PLAT)/
-	$(CC) $(CFLAGS) -fpic -pie -E -P -C -o $@ $<
+	$(CC) $(CFLAGS) -E -P -C -o $@ $<
 
 %.o: %.S
 	$(CC) $(CFLAGS) -mcmodel=large -c -nostdlib -o $(notdir $@) $<
