--- a/aarch64/el1_s/Makefile
+++ b/aarch64/el1_s/Makefile
@@ -9,6 +9,7 @@ EL1_S_OBJS		= el1_init.o \
                   el1_loader.o \
                   el1_sec.o \
 				  svc.o \
+                  mem_util.o \
 				  builtins.o
 
 -include .*.d
