Separate out 32/64-bit mem from platform
In preparation for using a common set of memory constants, separated out
environment specific memory details from platform details.

Signed-off-by: Greg Bellows <greg.bellows@linaro.org>

--- a/arm/Makefile
+++ b/arm/Makefile
@@ -2,7 +2,7 @@ BIOS_IMAGE 		= tztest.img
 SEC_IMAGE		= secure/sec.bin
 NSEC_IMAGE		= nonsecure/nsec.bin
 
-CFLAGS += -I../../platform/$(PLAT)/$(ARCH) -I../../libcflat/include
+CFLAGS += -I../../platform/$(PLAT) -I../../libcflat/include
 CFLAGS += -I../common -I../monitor
 CFLAGS += -DAARCH64
 
