Integrate aarch32 monitor support
Signed-off-by: Greg Bellows <greg.bellows@linaro.org>

--- a/arm/Makefile
+++ b/arm/Makefile
@@ -1,4 +1,5 @@
 BIOS_IMAGE 		= tztest.img
+MON_IMAGE		= monitor/mon.bin
 SEC_IMAGE		= secure/sec.bin
 NSEC_IMAGE		= nonsecure/nsec.bin
 
@@ -10,10 +11,14 @@ CFLAGS += -DAARCH64
 
 ##################################################################
 
-$(BIOS_IMAGE): $(SEC_IMAGE) $(NSEC_IMAGE)
-	dd if=$(SEC_IMAGE) of=$@ 2> /dev/null
+$(BIOS_IMAGE): $(MON_IMAGE) $(SEC_IMAGE) $(NSEC_IMAGE)
+	dd if=$(MON_IMAGE) of=$@ 2> /dev/null
+	dd oflag=seek_bytes seek=65536 if=$(SEC_IMAGE) of=$@ 2> /dev/null
 	dd oflag=seek_bytes seek=131072 if=$(NSEC_IMAGE) of=$@ 2> /dev/null
 	chmod +x $(BIOS_IMAGE)
+
+$(MON_IMAGE):
+	$(MAKE) -C monitor all
 
 $(SEC_IMAGE):
 	$(MAKE) -C secure all
@@ -24,6 +29,7 @@ $(NSEC_IMAGE):
 all: $(BIOS_IMAGE)
 
 clean:
+	$(MAKE) -C monitor clean
 	$(MAKE) -C secure clean
 	$(MAKE) -C nonsecure clean
 	$(RM) $(BIOS_IMAGE) .*.d
