Convert aarch32 EL1
Signed-off-by: Greg Bellows <greg.bellows@linaro.org>

--- a/arm/Makefile
+++ b/arm/Makefile
@@ -1,35 +1,35 @@
 BIOS_IMAGE 		= tztest.img
-MON_IMAGE		= monitor/mon.bin
-SEC_IMAGE		= secure/sec.bin
-NSEC_IMAGE		= nonsecure/nsec.bin
+EL3_IMAGE		= el3/el3.bin
+EL1_S_IMAGE		= el1_s/el1_sec.bin
+EL1_NS_IMAGE	= el1_ns/el1_nsec.bin
 
 CFLAGS += -I../../platform/$(PLAT) -I../../libcflat/include
 CFLAGS += -I../common -I../monitor
-CFLAGS += -DAARCH64
+CFLAGS += -DAARCH32
 
 -include .*.d
 
 ##################################################################
 
-$(BIOS_IMAGE): $(MON_IMAGE) $(SEC_IMAGE) $(NSEC_IMAGE)
-	dd if=$(MON_IMAGE) of=$@ 2> /dev/null
-	dd oflag=seek_bytes seek=65536 if=$(SEC_IMAGE) of=$@ 2> /dev/null
-	dd oflag=seek_bytes seek=131072 if=$(NSEC_IMAGE) of=$@ 2> /dev/null
+$(BIOS_IMAGE): $(EL3_IMAGE) $(EL1_S_IMAGE) $(EL1_NS_IMAGE)
+	dd if=$(EL3_IMAGE) of=$@ 2> /dev/null
+	dd oflag=seek_bytes seek=65536 if=$(EL1_S_IMAGE) of=$@ 2> /dev/null
+	dd oflag=seek_bytes seek=131072 if=$(EL1_NS_IMAGE) of=$@ 2> /dev/null
 	chmod +x $(BIOS_IMAGE)
 
-$(MON_IMAGE):
-	$(MAKE) -C monitor all
+$(EL3_IMAGE):
+	$(MAKE) -C el3 all
 
-$(SEC_IMAGE):
-	$(MAKE) -C secure all
+$(EL1_S_IMAGE):
+	$(MAKE) -C el1_s all
 
-$(NSEC_IMAGE):
-	$(MAKE) -C nonsecure all
+$(EL1_NS_IMAGE):
+	$(MAKE) -C el1_ns all
 
 all: $(BIOS_IMAGE)
 
 clean:
-	$(MAKE) -C monitor clean
-	$(MAKE) -C secure clean
-	$(MAKE) -C nonsecure clean
+	$(MAKE) -C el3 clean
+	$(MAKE) -C el1_s clean
+	$(MAKE) -C el1_ns clean
 	$(RM) $(BIOS_IMAGE) .*.d
