--- a/arm/el1_ns/Makefile
+++ b/arm/el1_ns/Makefile
@@ -1,19 +1,23 @@
-VPATH			= ../common
+VPATH			= ../el1_common:../common
 
-NSEC_ELF		= nsec.elf
-NSEC_IMAGE 		= nsec.bin
-NSEC_LOAD		= tztest_nonsecure.lds
-NSEC_OBJS		= nonsecure_init.o \
-				  nonsecure_svc.o \
-				  tztest.o \
-				  common_mmu.o \
-				  common_svc.o
+NSEC_ELF		= el1_nsec.elf
+NSEC_IMAGE 		= el1_nsec.bin
+NSEC_LOAD		= el1_nsec.lds
+NSEC_OBJS		= el1_init.o \
+				  el1_exception.o \
+				  el1.o \
+				  el1_nsec.o \
+				  el1_loader.o \
+				  mem_util.o \
+				  builtins.o
 
 ifneq (,$(findstring DEBUG, $(CFLAGS)))
 	NSEC_OBJS += tztest_debug.o
 endif
 
 -include .*.d
+
+CFLAGS += -I../el0_ns/ -I../el1_common
 
 ##################################################################
 
@@ -23,7 +27,7 @@ $(NSEC_ELF): $(NSEC_OBJS) $(NSEC_LOAD)
 $(NSEC_IMAGE): $(NSEC_ELF)
 	$(OBJCOPY) -O binary $(NSEC_ELF) $(NSEC_IMAGE)
 
-$(NSEC_LOAD): tztest_nonsecure.lds.S Makefile
+$(NSEC_LOAD): el1_nsec.lds.S Makefile
 	$(CC) $(CFLAGS) -E -P -C -o $@ $<
 
 %.o: %.S
