--- a/arm/el1_s/Makefile
+++ b/arm/el1_s/Makefile
@@ -8,6 +8,7 @@ EL1_S_OBJS		= el1_init.o \
 				  el1.o \
 				  el1_sec.o \
 				  el1_loader.o \
+				  svc.o \
 				  mem_util.o \
 				  builtins.o
 
